Scrollbars are now hidden until required for the detailed information on the issue details page.

--- a/public/css/scroll.less
+++ b/public/css/scroll.less
@@ -1,3 +1,4 @@
-.scroll::-webkit-scrollbar { width: 6px; }
-.scroll::-webkit-scrollbar-track { background:@scrollbar-background; }
+.scroll { overflow-y:auto; }
+.scroll::-webkit-scrollbar { width:6px; }
+.scroll::-webkit-scrollbar-track { background:@scrollbar-background; position:relative; }
 .scroll::-webkit-scrollbar-thumb { background:@scrollbar-foreground; }
