--- a/public/css/views/issues/issueDetails.less
+++ b/public/css/views/issues/issueDetails.less
@@ -29,7 +29,7 @@
 
 		>div.detailed-info { float:left; width:100%; margin-top:@spacing;
 			>div { float:left; width:16.6667%; padding-left:@spacing; .border-box;
-				>div { float:left; width:100%; height:(46px+36px*6+1px); overflow-y:scroll; }
+				>div { float:left; width:100%; height:(46px+36px*6+1px); }
 			}
 			>div:first-child { padding-left:0; }
 		}
